fix overlapping text in exams

--- a/src/components/account/subscriptions/index.scss
+++ b/src/components/account/subscriptions/index.scss
@@ -1,5 +1,17 @@
-.box-layout{
-    & video{
-        max-height: 50vh !important;
-    }
+.box-layout {
+  & video {
+    max-height: 50vh !important;
+  }
+}
+
+.break-word {
+  word-break: break-word !important;
+}
+
+.encoded-text {
+  & p {
+    max-width: 100% !important;
+
+    word-wrap: break-word !important;
+  }
 }
